tests/paczka1/small_fuzzy/52713629.err
Error in line 1: x3dFWMNVb A737 84,0
Error in line 7: x3dFWMNVb A534 99,0
Error in line 4: 3IB1kAWPI A534 15,3
Error in line 11: 3IB1kAWPI S354 10,1
Error in line 12: 3IB1kAWPI A540 55,5
